--- a/about.html
+++ b/about.html
@@ -16,5 +16,5 @@ I have been engaged in data analytics and ETL and for the past year I have been 
 </p>
 <p>
 I enjoy writing code when I can, in the past I wrote in Perl - nowadays I mostly write code in Python.
-In my spare time, I also serve as a research assistant in the field of computational chemistry.
+In my spare time, I also work as a research assistant in the [field of computational chemistry](https://continuous-symmetry.github.io/CSM-OUI/).
 </p>
