--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@ Extensive parts of my field of work is in the gray area between project managem
 </p>
 <p>
 During my years of work, I managed and maintained, among other things, websites and call centers for the organization in which I work.
-I have been engaged in data analytics and ETL and for the past year I have been managing a DBA team that includes Oracle and SQLserver DBAs.
+I have been engaged in data analytics and ETL.
+For the past year I have been leading our great DBA team that includes Oracle and SQLserver DBAs and  Oracle infrastructure.
 </p>
 <p>
 I enjoy writing code when I can, in the past I wrote in Perl - nowadays I mostly write code in Python.
